syntax = "proto3";

message LaplacianSharpenRequest{
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4; 
    bool is_preview_flag = 5;
    string in_lap_method = 6;

    // Newly added fields
    int32 par_st_row = 7;
    int32 par_en_row = 8;
    int32 par_st_col = 9;
    int32 par_en_col = 10;
    bool par_process_flag = 11;
}

message UnsharpMaskRequest{
    string in_img_path = 1;
    bool process_all_flag = 2;
    repeated string in_img_list = 3;
    string out_img_path = 4; 
    bool is_preview_flag = 5;
    double in_sharpen_spread = 6;
    double in_sharpen_power = 7;

    // Newly added fields
    int32 par_st_row = 8;
    int32 par_en_row = 9;
    int32 par_st_col = 10;
    int32 par_en_col = 11;
    bool par_process_flag = 12;
}
